white space resolved

--- a/src/index.css
+++ b/src/index.css
@@ -41,11 +41,16 @@
 
 
 .options-btn{
-  height: 40px;
-  width: 40px
+  height: 10vh;
+  width: 10vw;
+  margin-left:1vw;
+  
+
+
 }
 
 .ticker-text{
   font-size: 2vh;
   color: orange;
+  white-space: pre;
 }
